# SemesterTracker

./: .gitignore  CMakeLists.txt  README.md  README_STEP.txt  appicons.h  appstyle.cpp  appstyle.h  assignment.cpp  assignment.h  assignmenteditordialog.cpp  assignmenteditordialog.h  assignmenteditordialog.ui  assignmentswindow.cpp  assignmentswindow.h  assignmentswindow.ui  authservice.cpp  authservice.h  calendarwindow.cpp  calendarwindow.h  calendarwindow.ui  consoleapp.cpp  consoleapp.h  course.cpp  course.h  courseeditordialog.cpp  courseeditordialog.h  courseeditordialog.ui  courseprojectiondialog.cpp  courseprojectiondialog.h  courseprojectiondialog.ui  courseswindow.cpp  courseswindow.h  courseswindow.ui  dashboard.cpp  dashboard.h  dashboard.ui  databasemanager.cpp  databasemanager.h  gpatrendchart.cpp  gpatrendchart.h  (+27 more)
resources/: INFO_AFTER_INSTALLATION.txt  INFO_BEFORE_INSTALLATION.txt  LICENSE.txt  app_icon.rc  app_resources.qrc  deploy_release.bat
